[package]
name = "stats-cli"
version = "0.0.4"
authors = ["Erik Brinkman <erik.brinkman@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/erikbrinkman/stats"
documentation = "https://docs.rs/stats-cli"
repository = "https://github.com/erikbrinkman/stats"
license = "MIT"
description = "A command line statistics binary and package"

[badges]
travis-ci = { repository = "erikbrinkman/stats" }

[lib]
name = "inc_stats"

[[bin]]
name = "stats"
path = "src/main.rs"
doc = false

[dependencies]
clap = "^2.21"
order-stat = "^0.1"
