[package]
name = "stats-cli"
version = "3.0.1"
authors = ["Erik Brinkman <erik.brinkman@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/erikbrinkman/stats"
documentation = "https://docs.rs/stats-cli"
repository = "https://github.com/erikbrinkman/stats"
license = "MIT"
description = "A command line statistics binary and package"
edition = "2021"

[lib]
name = "inc_stats"

[[bin]]
name = "stats"
path = "src/main.rs"
doc = false

[dependencies]
clap = "^2.34"
num-traits = "^0.2"
